sep-dot problem fixed for mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -247,8 +247,9 @@ input:focus {
 }
 
 .sep-dot {
+    display: inline-block;
     width: 0.3em;
-    height: 0.3rem;
+    aspect-ratio: 1;
     background-color: var(--light-color-alt);
     transform: rotate(45deg);
 }
